fixed menu styling so contact/login does not break line on smaller desktop screens

--- a/wp-content/themes/wp-reddoor/static/styles/src/nav.less
+++ b/wp-content/themes/wp-reddoor/static/styles/src/nav.less
@@ -16,6 +16,12 @@
       margin-right: 40px;
       font-weight: 300;
       height: 55px;
+
+      // hide right margin on last menu item to make menu size a bit smaller
+      &:last-child {
+        margin-right: 0;
+      }
+
       a {
         &:hover{
           text-decoration: none;
